Fixed bug with ::before not showing up
(but it's now on top of the text when the window is too small)

--- a/app/web_server/static/css/style.css
+++ b/app/web_server/static/css/style.css
@@ -126,15 +126,15 @@ body {
 }
 
 
-.big-menu  li::after {
+.big-menu li::before {
 	position: absolute;
-	z-index: -1;
+	z-index: 0;
 }
 
 .big-menu .house {
 	background-color: #c0392b;
 }
-.big-menu .house::after{
+.big-menu .house::before{
 	content: url('../img/home.png');
     bottom: -50px;
     right: -15px;
@@ -143,7 +143,7 @@ body {
 .big-menu .monitoring {
 	background-color: #3498db;
 }
-.big-menu .monitoring::after{
+.big-menu .monitoring::before{
 	content: url('../img/graph.png');
     bottom: -80px;
     right: -15px;
@@ -152,7 +152,7 @@ body {
 .big-menu .news {
 	background-color: #2c3e50;
 }
-.big-menu .news::after{
+.big-menu .news::before{
 	content: url('../img/news.png');
     bottom: -80px;
     right: -15px;
@@ -161,7 +161,7 @@ body {
 .big-menu .clothes {
 	background-color: #16a085;
 }
-.big-menu .clothes::after{
+.big-menu .clothes::before{
 	content: url('../img/clothes.png');
     bottom: -10px;
     right: 15px;
@@ -170,7 +170,7 @@ body {
 .big-menu .music {
 	background-color: #2980b9;
 }
-.big-menu .music::after{
+.big-menu .music::before{
 	content: url('../img/music.png');
     bottom: -30px;
     right: -15px;
@@ -179,7 +179,7 @@ body {
 .big-menu .setup {
 	background-color: #7f8c8d;
 }
-.big-menu .setup::after{
+.big-menu .setup::before{
 	opacity: 0.8;
 	content: url('../img/setup.png');
     bottom: -30px;
